fetch commodities data of a provider